@@ -9,10 +9,10 @@
   :dependencies [[org.clojure/clojure "1.4.0"]
                  ;; http/web
                  [compojure "1.1.3"]
-                 [ring/ring-core "1.1.6"]
-                 [ring/ring-servlet "1.1.6"]
-                 [ring/ring-jetty-adapter "1.1.6"]
-                 [ring/ring-devel "1.1.6"]
+                 [ring/ring-core "1.1.7"]
+                 [ring/ring-servlet "1.1.7"]
+                 [ring/ring-jetty-adapter "1.1.7"]
+                 [ring/ring-devel "1.1.7"]
                  [ring/ring-json "0.1.2"]
                  [amalloy/ring-gzip-middleware "0.1.2"]
 
@@ -36,28 +36,33 @@
                  [postgresql/postgresql "9.1-901.jdbc4"]
                  [com.h2database/h2 "1.3.168"]
                  [com.jolbox/bonecp "0.7.1.RELEASE"]
-                 [korma "0.3.0-beta13" :exclusions [log4j/log4j]]
+                 [korma "0.3.0-beta15" :exclusions [log4j/log4j]]
                  [lobos "1.0.0-beta1"]
                  [org.clojure/core.cache "0.6.2"]
 
                  ;; remote repl
-                 [org.clojure/tools.nrepl "0.2.0-RC1"]
+                 [org.clojure/tools.nrepl "0.2.0"]
                  ;;[com.cemerick/pomegranate "0.0.13"]
                  
                  ;; misc
                  [clj-time "0.4.4"]
                  [commons-codec/commons-codec "1.6"]
                  [org.clojure/tools.cli "0.2.2"]
+                 ;; TODO lein 0.2.0-RC2 requires this
                  [bultitude "0.2.0"]
                  ]
   :ring {:handler ruuvi-server.launcher/ring-handler,
          :init ruuvi-server.launcher/ring-init,
          :destroy ruuvi-server.launcher/ring-destroy}
+
   :profiles {:dev
              {:dependencies
               [
                [midje "1.4.0" :exclusions [org.clojure/clojure]]
                ]}}
+
+  :jvm-opts ["-server" "-XX:+UseConcMarkSweepGC"]
+
   ;; enable OTF (on-the-fly compilation)
   ;; :hooks [lein-otf.hooks]
   
